--- a/pom.xml
+++ b/pom.xml
@@ -141,6 +141,26 @@
 							</descriptorRefs>
 						</configuration>
 					</execution>
+					<execution>
+						<id>make-assembly-relationships</id>
+						<!-- bind to the packaging phase -->
+						<phase>package</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
+						<configuration>
+							<archive>
+								<manifest>
+									<mainClass>monarch.ebi.phenotype.utils.UphenoRelationshipAugmentationApp</mainClass>
+								</manifest>
+							</archive>
+							<finalName>upheno-relationship-augmentation</finalName>
+							<appendAssemblyId>false</appendAssemblyId>
+							<descriptorRefs>
+								<descriptorRef>jar-with-dependencies</descriptorRef>
+							</descriptorRefs>
+						</configuration>
+					</execution>
 				</executions>
 			</plugin>
 		</plugins>
