--- a/pom.xml
+++ b/pom.xml
@@ -25,8 +25,14 @@
 		<dependency>
 			<groupId>net.sourceforge.owlapi</groupId>
 			<artifactId>owlapi-distribution</artifactId>
-			<version>4.5.1</version>
+			<version>4.5.6</version>
 		</dependency>
+		<dependency>
+			<groupId>com.nico.code</groupId>
+			<artifactId>obographstest</artifactId>
+			<version>1.0.1</version>
+		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
 		<dependency>
 			<groupId>commons-io</groupId>
@@ -62,7 +68,12 @@
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
-			<version>27.1-jre</version>
+			<version>28.2-jre</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-guava</artifactId>
+			<version>2.9.4</version>
 		</dependency>
 
 	</dependencies>
@@ -122,6 +133,26 @@
 						</configuration>
 					</execution>
 					<execution>
+						<id>make-assembly-infer-annotate</id>
+						<!-- bind to the packaging phase -->
+						<phase>package</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
+						<configuration>
+							<archive>
+								<manifest>
+									<mainClass>monarch.ebi.phenotype.utils.VFBExpressionAnnotator</mainClass>
+								</manifest>
+							</archive>
+							<finalName>infer-annotate</finalName>
+							<appendAssemblyId>false</appendAssemblyId>
+							<descriptorRefs>
+								<descriptorRef>jar-with-dependencies</descriptorRef>
+							</descriptorRefs>
+						</configuration>
+					</execution>
+					<execution>
 						<id>make-assembly-taxon</id>
 						<!-- bind to the packaging phase -->
 						<phase>package</phase>
@@ -142,6 +173,66 @@
 						</configuration>
 					</execution>
 					<execution>
+						<id>make-haspart-buffer</id>
+						<!-- bind to the packaging phase -->
+						<phase>package</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
+						<configuration>
+							<archive>
+								<manifest>
+									<mainClass>monarch.ebi.phenotype.utils.AddHasPartBufferApp</mainClass>
+								</manifest>
+							</archive>
+							<finalName>add-haspart-buffer</finalName>
+							<appendAssemblyId>false</appendAssemblyId>
+							<descriptorRefs>
+								<descriptorRef>jar-with-dependencies</descriptorRef>
+							</descriptorRefs>
+						</configuration>
+					</execution>
+					<execution>
+						<id>make-assertmatchesassubclass</id>
+						<!-- bind to the packaging phase -->
+						<phase>package</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
+						<configuration>
+							<archive>
+								<manifest>
+									<mainClass>monarch.ebi.phenotype.utils.AssertMatchesAsSubclassOfAxiomsApp</mainClass>
+								</manifest>
+							</archive>
+							<finalName>upheno-assertmatches</finalName>
+							<appendAssemblyId>false</appendAssemblyId>
+							<descriptorRefs>
+								<descriptorRef>jar-with-dependencies</descriptorRef>
+							</descriptorRefs>
+						</configuration>
+					</execution>
+					<execution>
+						<id>make-semanticsimilarity</id>
+						<!-- bind to the packaging phase -->
+						<phase>package</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
+						<configuration>
+							<archive>
+								<manifest>
+									<mainClass>monarch.ebi.phenotype.utils.SimpleJaccardApp</mainClass>
+								</manifest>
+							</archive>
+							<finalName>upheno-semanticsimilarity</finalName>
+							<appendAssemblyId>false</appendAssemblyId>
+							<descriptorRefs>
+								<descriptorRef>jar-with-dependencies</descriptorRef>
+							</descriptorRefs>
+						</configuration>
+					</execution>
+					<execution>
 						<id>make-assembly-relationships</id>
 						<!-- bind to the packaging phase -->
 						<phase>package</phase>
@@ -155,6 +246,46 @@
 								</manifest>
 							</archive>
 							<finalName>upheno-relationship-augmentation</finalName>
+							<appendAssemblyId>false</appendAssemblyId>
+							<descriptorRefs>
+								<descriptorRef>jar-with-dependencies</descriptorRef>
+							</descriptorRefs>
+						</configuration>
+					</execution>
+					<execution>
+						<id>make-ontology-analyser</id>
+						<!-- bind to the packaging phase -->
+						<phase>package</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
+						<configuration>
+							<archive>
+								<manifest>
+									<mainClass>monarch.ebi.phenotype.utils.OntologyAnalyserApp</mainClass>
+								</manifest>
+							</archive>
+							<finalName>ontology-analyser</finalName>
+							<appendAssemblyId>false</appendAssemblyId>
+							<descriptorRefs>
+								<descriptorRef>jar-with-dependencies</descriptorRef>
+							</descriptorRefs>
+						</configuration>
+					</execution>
+					<execution>
+						<id>make-obographs-tester-app</id>
+						<!-- bind to the packaging phase -->
+						<phase>package</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
+						<configuration>
+							<archive>
+								<manifest>
+									<mainClass>monarch.ebi.phenotype.utils.OBOGraphsTesterApp</mainClass>
+								</manifest>
+							</archive>
+							<finalName>obographs-tester</finalName>
 							<appendAssemblyId>false</appendAssemblyId>
 							<descriptorRefs>
 								<descriptorRef>jar-with-dependencies</descriptorRef>
